rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-extresources-attrib.rnc.snap
---
source: rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Definition(
                        Definition {
                            name: "SVG.externalResourcesRequired.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "externalResourcesRequired",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: "Boolean.datatype",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.External.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.External.attrib",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.externalResourcesRequired.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.External.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
